reoriented first sideways pic and removed its turn-right class name. Will do the same for the other similarly afflicted pics. Fixed unfinished captions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class="messages px-2 text-center">We are all looking forward to the next time we are together! Until then, here's a trip down memory lane, whether it be moments we get to share with you or moments of us together that we get to remember.</p>
     <div class="container-all">
         <div class="container">
-            <img src="./images/IMG_1301.jpg" class="turn-right" alt="">
+            <img src="./images/firstPicReoriented.JPG" alt="">
             <span class="title">Check out the handsome fox on the left</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
@@ -34,7 +34,7 @@
         </div>
         <div class="container">
             <img src="./images/IMG-0272.JPG" alt="">
-            <span class="title">Blurry people on a dock</span>
+            <span class="title">The Mesibov clan, upstate NY</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
@@ -49,7 +49,7 @@
         </div>
         <div class="container">
             <img src="./images/IMG-0277.JPG" alt="">
-            <span class="title">Alissa in Ireland? Edinboughrushdfhseu however it's spelled? Alissa where are you?</span>
+            <span class="title">Alissa in Edinburgh</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
 
@@ -77,7 +77,7 @@
 
         <div class="container">
             <img src="./images/IMG-0281.JPG" alt="">
-            <span class="title">Happy Couple : )</span>
+            <span class="title">Happy couple enjoying time in NYC</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
 
@@ -95,7 +95,7 @@
 
         <div class="container">
             <img src="./images/IMG-0284.JPG" alt="">
-            <span class="title">WHERE ARE YOU</span>
+            <span class="title">Canterbury Cathedral</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
@@ -134,12 +134,12 @@
         </div>
         <div class="container">
             <img src="./images/IMG-0290.JPG" alt="">
-            <span class="title">WHERE ARE YOU</span>
+            <span class="title">Alissa at the University of Kent</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
             <img src="./images/IMG-0291.JPG" alt="">
-            <span class="title">This castle looks familiar</span>
+            <span class="title">Whitstable Castle</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
@@ -150,7 +150,7 @@
 
         <div class="container">
             <img src="./images/IMG_0010.JPG" class="turn-right" alt="">
-            <span class="title">Narnia?</span>
+            <span class="title">Having some Minnesota fun at the ice castle</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
@@ -171,7 +171,7 @@
 
         <div class="container">
             <img src="./images/IMG_2637.JPG" alt="">
-            <span class="title">WHERE ARE YOU</span>
+            <span class="title">Enjoying the sunshine in Naples</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
@@ -248,17 +248,17 @@
         </div>
         <div class="container">
             <img src="./images/IMG_1589.JPG" alt="">
-            <span class="title">WHERE ARE YOU</span>
+            <span class="title">Dubrovnik, what a great time!</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
             <img src="./images/IMG_2127.JPG" alt="">
-            <span class="title">Worth it</span>
+            <span class="title">Worth it . . . some things never change</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
             <img src="./images/IMG_2492.JPG" alt="">
-            <span class="title">Waiting for food, probably</span>
+            <span class="title">Celebrating G Ma's 90th!</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
