finished editing captions and fixed orientation of photos that needed reorientation. Also edited the love pic to not have the iphone battery life info and other extra space at the top

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <br>
     <h1>Happy Father's Day to an Awesome Dad!</h1>
     <br>
@@ -149,7 +149,7 @@
         </div>
 
         <div class="container">
-            <img src="./images/IMG_0010.JPG" class="turn-right" alt="">
+            <img src="./images/iceCastlePicReoriented.JPG" alt="">
             <span class="title">Having some Minnesota fun at the ice castle</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
@@ -208,7 +208,7 @@
 
         <div class="container">
             <img src="./images/IMG_0821.jpg" alt="">
-            <span class="title">Cheeeeeeeese!</span>
+            <span class="title">Through thick and thin, always</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
@@ -217,7 +217,7 @@
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
-            <img src="./images/IMG_1146.JPG" alt="">
+            <img src="./images/LovePicReoriented.JPG" alt="">
             <span class="title">Love</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
@@ -237,12 +237,12 @@
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
-            <img src="./images/IMG_1379.JPG" class="turn-right" alt="">
+            <img src="./images/HavingAGoodTimePicReoriented.JPG" alt="">
             <span class="title">Having a good time</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
         <div class="container">
-            <img src="./images/IMG_1387.JPG" class="turn-right" alt="">
+            <img src="./images/AndNowItsAPartyPicReoriented.JPG" alt="">
             <span class="title">And now it's a party</span>
             <!-- <span class="text">Morbi diam viverra mattis sociis magna, habitasse penatibus non lectus</span> -->
         </div>
@@ -279,8 +279,8 @@
     </div>
 
     <div class="container">
-        <p class="messages">Happy Father's Day, Dad! We love you so much, and we will see you soon <i class="fas fa-laugh-beam quote-icon"></i> </p>
-        </div>
+        <br><br> <br><br> <br><br> <br><br>
+        <p class="messages ending">Happy Father's Day, Dad! We love you so much, and we will see you soon <i class="fas fa-laugh-beam quote-icon"></i> </p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
